--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "vue-zenkaku-hankaku",
   "author": "issei",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Issei0804-ie/vue-zenkaku-hankaku.git"
